<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_fresh_market"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_username"
        android:theme="@style/EditText">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_username"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="14sp"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/hint_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_password"
        android:theme="@style/EditText">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_password"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/hint_password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/login_button"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/round_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/register_button"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/action_round_button"/>

</LinearLayout>